<?xml version="1.0"?>
<package format="2">
  <name>ntl_motoman_pkgs</name>
  <version>0.1.0</version>
  <description>The application package for ntl_motoman_pkgs</description>

  <maintainer email="p595201m@mail.kyutech.jp">Masaru Morita</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
